--- a/profile/index.html
+++ b/profile/index.html
@@ -285,16 +285,16 @@
             </a>
             <div class="dropdown-menu dropdown-menu-animation ms-n3 dropdown-md p-3 border-radius-lg mt-0 mt-lg-3" aria-labelledby="dropdownMenuPages8">
               <div class="d-none d-lg-block">
-                <h6 class="dropdown-header text-dark font-weight-bolder d-flex align-items-center px-1">
+                <h6 class="dropdown-header text-dark font-weight-bolder d-flex align-items-center px-1 d-none">
                   Organization
                 </h6>
-                <a href="../organization/teams/" class="dropdown-item border-radius-md">
+                <a href="../organization/teams/" class="dropdown-item border-radius-md d-none">
                   <span>Employee</span>
                 </a>
-                <a href="../organization/report/" class="dropdown-item border-radius-md">
+                <a href="../organization/report/" class="dropdown-item border-radius-md d-none">
                   <span>Insight</span>
                 </a>
-                <a href="../organization/settings/" class="dropdown-item border-radius-md">
+                <a href="../organization/settings/" class="dropdown-item border-radius-md d-none">
                   <span>Update Information</span>
                 </a>
                 <h6 class="dropdown-header text-dark font-weight-bolder d-flex align-items-center px-1 mt-3">
@@ -308,16 +308,16 @@
                 </a>
               </div>
               <div class="d-lg-none">
-                <h6 class="dropdown-header text-dark font-weight-bolder d-flex align-items-center px-1">
+                <h6 class="dropdown-header text-dark font-weight-bolder d-flex align-items-center px-1 d-none">
                   Organization
                 </h6>
-                <a href="../organization/employee/" class="dropdown-item border-radius-md">
+                <a href="../organization/employee/" class="dropdown-item border-radius-md d-none">
                   <span>Employee</span>
                 </a>
-                <a href="../organization/report/" class="dropdown-item border-radius-md">
+                <a href="../organization/report/" class="dropdown-item border-radius-md d-none">
                   <span>Insight</span>
                 </a>
-                <a href="../organization/settings/" class="dropdown-item border-radius-md">
+                <a href="../organization/settings/" class="dropdown-item border-radius-md d-none">
                   <span>Update Information</span>
                 </a>
                 <h6 class="dropdown-header text-dark font-weight-bolder d-flex align-items-center px-1 mt-3">
