--- a/account/team/index.html
+++ b/account/team/index.html
@@ -388,7 +388,7 @@
                         <option value="admin" class="hidden" perm='team-admin-add'>Admin</option>
                         <option value="staff" class="hidden" perm='team-staff-add' selected>Staff</option>
                         <option value="assistant" class="hidden" perm='team-assistant-add'>Assistant</option>
-                        <option value="noRole">Not An Employee</option>
+                        <option value="noRole" class="hidden" perm='team-noRole-add'>Not An Employee</option>
                       </select>
                     </div>
 
@@ -915,7 +915,24 @@
                         View Unassigned Role
                       </label>
                     </div>
-
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <input class="form-check-input" type="checkbox" value="" id="viewOwner">
+                        <span class="form-check-sign">
+                          <span class="check"></span>
+                        </span>
+                        View Owner
+                      </label>
+                    </div>
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <input class="form-check-input" type="checkbox" value="" id="viewSuperAdmin">
+                        <span class="form-check-sign">
+                          <span class="check"></span>
+                        </span>
+                        View Super Admin
+                      </label>
+                    </div>
                   </div>
 
 
@@ -1263,28 +1280,123 @@
       roleDocRef.get().then((snapshot) => {
 
 
-        let superAdminExist = false;
+        let superAdminExist = false; // For Owner to add superAdmin
+
         snapshot.forEach((doc) => {
           console.log(doc.data())
           allRoleDoc.push(doc.data())
           renderRole(doc.data())
 
-          if (doc.data()[ORG_ROLE_EMP_ROLE] === ORG_ROLE_SUPER_ADMIN && role_empRole === ORG_ROLE_OWNER) {
+          if (doc.data()[ORG_ROLE_EMP_ROLE] === ORG_ROLE_SUPER_ADMIN) {
             superAdminExist = true
           }
 
         })
 
-          if (!superAdminExist){
-            var teamSuperAdminAdd = bodyPermission.querySelectorAll(`[perm='team-superAdmin-add']`)
-            teamSuperAdminAdd.forEach((ele) => {ele.classList.remove("hidden")})
-          }
-
+        // For owner to add superAdmin
+        if (!superAdminExist  && role_empRole === ORG_ROLE_OWNER){
+          var teamSuperAdminAdd = bodyPermission.querySelectorAll(`[perm='team-superAdmin-add']`)
+          teamSuperAdminAdd.forEach((ele) => {ele.classList.remove("hidden")})
+        }
 
       })
       .then(() => {
-        updateRoleView ()
+        checkIfUserCanViewAPerson()
+        // updateRoleView ()
+
+        checkIfUserCanAddAPerson()
       })
+    }
+
+    // Check if user can clicked on person to view/edit the details at edit page. If no, disable pointer events.
+    const body = document.getElementsByTagName('body')[0];
+
+    function checkIfUserCanViewAPerson() {
+      const teamOwnerView = body.querySelectorAll(`[perm='team-owner-view']`)
+      const teamSuperAdminView = body.querySelectorAll(`[perm='team-superAdmin-view']`)
+      const teamAdminView = body.querySelectorAll(`[perm='team-admin-view']`)
+      const teamStaffView = body.querySelectorAll(`[perm='team-staff-view']`)
+      const teamAssistantView = body.querySelectorAll(`[perm='team-assistant-view']`)
+      const teamNoRoleView = body.querySelectorAll(`[perm='team-noRole-view']`)
+      // console.log(teamOwnerView)
+      // console.log(teamSuperAdminView)
+      // console.log(teamAdminView)
+
+      if (role_allowedPermissionArr.includes('viewOwner')) {
+        teamOwnerView.forEach((ele) => {ele.classList.remove("pointer-events-none")})
+      }
+      if (role_allowedPermissionArr.includes('viewSuperAdmin')) {
+        teamSuperAdminView.forEach((ele) => {ele.classList.remove("pointer-events-none")})
+      }
+      if (role_allowedPermissionArr.includes('viewAdmin')) {
+        teamAdminView.forEach((ele) => {ele.classList.remove("pointer-events-none")})
+      }
+      if (role_allowedPermissionArr.includes('viewStaff')) {
+        teamStaffView.forEach((ele) => {ele.classList.remove("pointer-events-none")})
+      }
+      if (role_allowedPermissionArr.includes('viewAssistant')) {
+        teamAssistantView.forEach((ele) => {ele.classList.remove("pointer-events-none")})
+      }
+      if (role_allowedPermissionArr.includes('viewNoRole')) {
+        teamNoRoleView.forEach((ele) => {ele.classList.remove("pointer-events-none")})
+      }
+
+      // Overwriting if you're owner or superAdmin
+
+      // Owner & super admin can view everyone
+      if (role_empRole === ORG_ROLE_OWNER || role_empRole === ORG_ROLE_SUPER_ADMIN){
+        teamOwnerView.forEach((ele) => {ele.classList.remove("pointer-events-none")})
+        teamSuperAdminView.forEach((ele) => {ele.classList.remove("pointer-events-none")})
+        teamAdminView.forEach((ele) => {ele.classList.remove("pointer-events-none")})
+        teamStaffView.forEach((ele) => {ele.classList.remove("pointer-events-none")})
+        teamAssistantView.forEach((ele) => {ele.classList.remove("pointer-events-none")})
+        teamNoRoleView.forEach((ele) => {ele.classList.remove("pointer-events-none")})
+      }
+
+    }
+
+    // Decide what role a user can add.
+    function checkIfUserCanAddAPerson() {
+      // ROLE fields
+      const roleSelect = bodyPermission.querySelectorAll(`.custom-select`)
+        roleSelect.forEach((ele) => {
+          let adminList = ele.querySelector(`[value='admin']`)
+          let staffList = ele.querySelector(`[value='staff']`)
+          let assistantList = ele.querySelector(`[value='assistant']`)
+          let noRoleList = ele.querySelector(`[value='noRole']`)
+
+          console.log(adminList)
+
+          if (role_allowedPermissionArr.includes('addStaff')){
+            adminList.selected = false;
+            staffList.selected = true;
+            assistantList.selected = false;
+            noRoleList.selected = false;
+            initPermissionBasedOnRole(ORG_ROLE_STAFF)
+          }
+          else if (role_allowedPermissionArr.includes('addAssistant')){
+            adminList.selected = false;
+            staffList.selected = false;
+            assistantList.selected = true;
+            noRoleList.selected = false;
+            initPermissionBasedOnRole(ORG_ROLE_ASSISTANT)
+          }
+          else if (role_allowedPermissionArr.includes('addAdmin')){
+            adminList.selected = true;
+            staffList.selected = false;
+            assistantList.selected = false;
+            noRoleList.selected = false;
+            initPermissionBasedOnRole(ORG_ROLE_ADMIN)
+          }
+          else {
+            adminList.selected = false;
+            staffList.selected = false;
+            assistantList.selected = false;
+            noRoleList.selected = true;
+            initPermissionBasedOnRole(ORG_ROLE_NO_ROLE)
+          }
+        })
+
     }
 
     function renderRole(data){
@@ -1313,37 +1425,43 @@
       let pointerEventsClass = "pointer-events-none"
       if (data[ORG_ROLE_EMP_ROLE] === ORG_ROLE_OWNER) {
         role = 'Owner';
-        perm = '';
+        perm = 'team-owner-view'
 
-        if (role_empRole === ORG_ROLE_OWNER)
-          pointerEventsClass = ""
+        // if (role_empRole === ORG_ROLE_OWNER)
+        //   pointerEventsClass = ""
       }
       else if (data[ORG_ROLE_EMP_ROLE] === ORG_ROLE_SUPER_ADMIN) {
         role = 'Super Admin'
-        perm = ''
-        if (role_empRole === ORG_ROLE_OWNER || role_empRole === ORG_ROLE_SUPER_ADMIN)
-          pointerEventsClass = ""
+        perm = 'team-superAdmin-view'
+        // if (role_empRole === ORG_ROLE_OWNER || role_empRole === ORG_ROLE_SUPER_ADMIN)
+        //   pointerEventsClass = ""
       }
       else if (data[ORG_ROLE_EMP_ROLE] === ORG_ROLE_ADMIN){
          role = 'Admin'
-         perm = 'team-admin-edit'
+         perm = 'team-admin-view'
         }
       else if (data[ORG_ROLE_EMP_ROLE] === ORG_ROLE_STAFF) {
         role = 'Staff'
-        perm = 'team-staff-edit'
+        perm = 'team-staff-view'
       }
       else if (data[ORG_ROLE_EMP_ROLE] === ORG_ROLE_ASSISTANT) {
         role = 'Assistant'
-        perm = 'team-assistant-edit'
+        perm = 'team-assistant-view'
       }
       else {
-         role = 'No Role'
-         perm = ''
+        role = 'No Role'
+        perm = 'team-noRole-view'
 
-         if (role_empRole === ORG_ROLE_OWNER || role_empRole === ORG_ROLE_SUPER_ADMIN || role_empRole === ORG_ROLE_ADMIN)
-            pointerEventsClass = ""
+        // if (role_empRole === ORG_ROLE_OWNER || role_empRole === ORG_ROLE_SUPER_ADMIN || role_empRole === ORG_ROLE_ADMIN)
+        //   pointerEventsClass = ""
+      }
+      role = role + " " +data[ORG_ROLE_UID]
 
-        }
+      // Overwrite if your are the person
+      if (data[ORG_ROLE_UID] === org_uid){
+        pointerEventsClass = "";
+        perm = ''
+      }
 
       let status = "";
       if(data[ORG_ROLE_EMP_STATUS] === ORG_EMP_STATUS_NEW) status = 'NEW'
@@ -1526,13 +1644,10 @@
     var ROLE_ID = "";
 
 		$( document ).ready(function() {
-      initPermissionBasedOnRole(ORG_ROLE_STAFF)
 
       $('#empRole').on('change', function(e) {
 
         initPermissionBasedOnRole(this.value);
-
-        // console.log(getCheckedPermission())
       })
 
       $('div[name=permission]').on('change', function(e) {
@@ -1636,6 +1751,8 @@
     const editNoRole = document.getElementById('editNoRole');
     const delNoRole = document.getElementById('delNoRole');
     const viewNoRole = document.getElementById('viewNoRole');
+    const viewOwner = document.getElementById('viewOwner');
+    const viewSuperAdmin = document.getElementById('viewSuperAdmin');
 
     const editAccountProfile = document.getElementById('editAccountProfile');
     const viewInsight = document.getElementById('viewInsight');
@@ -1651,19 +1768,19 @@
       "addAdmin", "editAdmin", "delAdmin", "viewAdmin",
       "addStaff", "editStaff", "delStaff", "viewStaff",
       "addAssistant", "editAssistant", "delAssistant", "viewAssistant",
-      "addSuperAdmin", "editSuperAdmin", "delSuperAdmin", "viewSuperAdmin",
       "addNoRole", "editNoRole", "delNoRole", "viewNoRole",
+      "viewOwner", "viewSuperAdmin",
       "viewInsight", "editAccountProfile"
       ]
     const disablePermissionArrAdmin =
-      [//"delInv", "delPayroll", "delPayslip",
-      "addAdmin", "editAdmin", "delAdmin", "viewAdmin"]
+      ["delAdmin"]
     const  disablePermissionArrStaff =
       ["delInv", "delPayroll", "delPayslip",
       "addAdmin", "editAdmin", "delAdmin", "viewAdmin",
       "addStaff", "editStaff", "delStaff", "viewStaff",
       "addAssistant", "editAssistant", "delAssistant", "viewAssistant",
       "addNoRole", "editNoRole", "delNoRole", "viewNoRole",
+      "viewOwner", "viewSuperAdmin",
       "viewInsight", "editAccountProfile"]
     const disablePermissionArrAssistant =
       ["delClass",
@@ -1675,6 +1792,7 @@
       "addStaff", "editStaff", "delStaff", "viewStaff",
       "addAssistant", "editAssistant", "delAssistant", "viewAssistant",
       "addNoRole", "editNoRole", "delNoRole", "viewNoRole",
+      "viewOwner", "viewSuperAdmin",
       "viewInsight", "editAccountProfile"
       ]
     const disablePermissionArrNoRole =
@@ -1690,9 +1808,10 @@
       "addAssistant", "editAssistant", "delAssistant", "viewAssistant",
       "addSuperAdmin", "editSuperAdmin", "delSuperAdmin", "viewSuperAdmin",
       "addNoRole", "editNoRole", "delNoRole", "viewNoRole",
+      "viewOwner", "viewSuperAdmin",
       "viewInsight", "editAccountProfile"
       ]
-    function initPermissionBasedOnRole(role, permissionArr) {
+    function initPermissionBasedOnRole(role) {
 
       uncheckPermission();
 
@@ -1717,12 +1836,11 @@
           "addLesson", "editLesson", "delLesson", "viewLesson",
           "addStudent", "editStudent", "delStudent", "viewStudent",
           "addTeacher", "editTeacher", "delTeacher", "viewTeacher",
-          "addInv", "editInv", "recordPaymentInv", "viewInv",
-          "addPayroll", "editPayroll", "viewPayroll",
-          "addPayslip", "editPayslip", "recordPaymentPayslip", "viewPayslip",
-          "addStaff", "editStaff", "viewStaff",
-          "addAssistant", "editAssistant", "viewAssistant",
-          "addNoRole", "editNoRole", "viewNoRole",
+          "viewInv",
+          "viewPayroll",
+          "viewStaff",
+          "viewAssistant",
+          "viewNoRole",
           "editAccountProfile"
           ]
           checkPermission(checkPermissionArr);
