--- a/index.html
+++ b/index.html
@@ -385,6 +385,8 @@
     // Page Specific Initialization
     function loadPageInitFunc(){
 
+      document.getElementById("user").textContent = org_name;
+
       // Load all roles
       loadAllRoles();
 
