--- a/profile/index.html
+++ b/profile/index.html
@@ -541,7 +541,7 @@
 
     // Page Specific Initialization
     function loadPageInitFunc(){
-
+      document.getElementById("user").textContent = org_name;
       // Update page view
       updatePageView();
     }
