--- a/account/teacher/index.html
+++ b/account/teacher/index.html
@@ -309,7 +309,7 @@
 
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-primary hidden" data-dismiss="modal" data-toggle='modal' data-target='#createTutorModal' perm='teach-teacher-add'>Add Manually</button>
+                <button type="button" class="btn btn-primary hidden"data-toggle='modal' data-target='#createTutorModal' data-dismiss="modal" perm='teach-teacher-add'>Add Manually</button>
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
               </div>
             </div>
@@ -317,6 +317,12 @@
         </div>
       </div>
 
+      <!-- Bug: createTutorModal shown after addTutorModal hidden cause scroll-y to get hidden. Force overflow-y here -->
+      <style>
+        #createTutorModal {
+          overflow-y:scroll;
+        }
+      </style>
       <!-- Create Tutor modal -->
       <div class="row">
         <div class="modal fade" id="createTutorModal" tabindex="-1" role="dialog" aria-labelledby="createTutorModalLabel" aria-hidden="true">
@@ -618,8 +624,6 @@
   <script src="../../assets/js/plugins/bootstrap-notify.js"></script>
   <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
   <script src="../../assets/js/material-dashboard.js?v=2.1.2" type="text/javascript"></script>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ" crossorigin="anonymous"></script>
   <!-- Common constants -->
   <script src="../../assets/js/common.js" type="text/javascript"></script>
   <!-- General Info -->
@@ -696,6 +700,8 @@
         btnAddTeacher.style.pointerEvents = "auto";
         btnAddTeacher.setAttribute("data-toggle", "modal");
         btnAddTeacher.setAttribute("data-target", "#addTutorModal");
+        // btnAddTeacher.setAttribute("data-target", "#createTutorModal");
+
 
 
         // console.log(adminTeacherNum)
