--- a/login/index.html
+++ b/login/index.html
@@ -935,7 +935,7 @@
         document.getElementById("btnLogin").removeAttribute("disabled");
         document.getElementById("btnLogin").textContent = 'Confirm And Login';
 
-        // window.location.href = '../'
+        window.location.href = '../'
       })
       .catch(function (error) {
         // alert(error.message);
