--- a/account/payroll/run-payroll.html
+++ b/account/payroll/run-payroll.html
@@ -1642,10 +1642,8 @@
   <script src="../../assets/js/plugins/moment.min.js"></script>
   <!--  Notifications Plugin    -->
   <script src="../../assets/js/plugins/bootstrap-notify.js"></script>
-  <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
+  <!-- Material Dashboard -->
   <script src="../../assets/js/material-dashboard.js?v=2.1.2" type="text/javascript"></script>
-
-  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ" crossorigin="anonymous"></script> -->
   <!-- Common constants -->
   <script src="../../assets/js/common.js" type="text/javascript"></script>
   <!-- General Info -->
@@ -1659,8 +1657,6 @@
   <!-- Html 2 PDF -->
   <!-- <script src="https://raw.githack.com/eKoopmans/html2pdf/master/dist/html2pdf.bundle.js"></script>  -->
   <script src="../../assets/js/html2pdf.js" type="text/javascript"></script>
-
-
 	<script>
 
     //  Tutor Settings
